create a basic window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.16..3.25)
 
 include(CMakeDependentOption)
-option(ES_USE_VCPKG "Use vcpkg to get dependencies." ON)
-cmake_dependent_option(ES_GLES "Build the game with OpenGL ES" OFF UNIX OFF)
-cmake_dependent_option(ES_USE_SYSTEM_LIBRARIES "Use system libraries instead of the vcpkg ones." ON UNIX OFF)
-cmake_dependent_option(ES_USE_OFFSCREEN
+option(AM_USE_VCPKG "Use vcpkg to get dependencies." ON)
+cmake_dependent_option(AM_GLES "Build the game with OpenGL ES" OFF UNIX OFF)
+cmake_dependent_option(AM_USE_SYSTEM_LIBRARIES "Use system libraries instead of the vcpkg ones." ON UNIX OFF)
+cmake_dependent_option(AM_USE_OFFSCREEN
 	"Use SDL's offscreen backend instead of Xvfb for the integration tests" OFF UNIX OFF)
-cmake_dependent_option(ES_CREATE_BUNDLE "Create a Bundle instead of an executable" OFF APPLE OFF)
+cmake_dependent_option(AM_CREATE_BUNDLE "Create a Bundle instead of an executable" OFF APPLE OFF)
 
 # Support Debug and Release configurations.
 set(CMAKE_CONFIGURATION_TYPES "Debug" "Release" CACHE STRING "" FORCE)
@@ -22,8 +22,8 @@ set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE)
 set(CMAKE_BUILD_RPATH_USE_ORIGIN ON)
 
 # Setup vcpkg.
-if(ES_USE_VCPKG)
-	include(utils/vcpkg_bootstrap.cmake)
+if(AM_USE_VCPKG)
+	include(vcpkg_bootstrap.cmake)
 	x_vcpkg_bootstrap()
 
 	set(VCPKG_BOOTSTRAP_OPTIONS "-disableMetrics")
@@ -33,7 +33,7 @@ if(ES_USE_VCPKG)
 		CACHE STRING "Vcpkg toolchain file")
 endif()
 
-if(ES_USE_SYSTEM_LIBRARIES)
+if(AM_USE_SYSTEM_LIBRARIES)
 	if(UNIX AND NOT APPLE)
 		# If using the system libraries from a Linux distro, statically link every other library needed.
 		# This is to make sure that the resulting binary has no dependencies on libraries (other than
@@ -47,12 +47,11 @@ endif()
 
 # Various helpful options for IDEs.
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT EndlessSky)
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT AsteroidMiner)
 set(CMAKE_VS_JUST_MY_CODE_DEBUGGING ON)
 
-project("Endless Sky" VERSION 0.9.17
-	DESCRIPTION "Space exploration, trading, and combat game."
-	HOMEPAGE_URL https://endless-sky.github.io/
+project("Asteroid Miner" VERSION 0.0.0
+	DESCRIPTION ""
 	LANGUAGES CXX)
 
 # Find the needed library dependencies.
@@ -99,21 +98,16 @@ endif()
 
 # Add the library target.
 add_subdirectory(source)
-# Setup for the testing frameworks.
-include(CTest)
-if(BUILD_TESTING)
-	add_subdirectory(tests)
-endif()
 
 # Create game target.
-if(APPLE AND ES_CREATE_BUNDLE)
-	add_executable(EndlessSky MACOSX_BUNDLE source/main.cpp)
+if(APPLE AND AM_CREATE_BUNDLE)
+	add_executable(AsteroidMiner MACOSX_BUNDLE source/main.cpp)
 
 	# MacOS bundles are a bit special and need every resource specified when
 	# creating the executable.
 	foreach(folder "data" "images" "sounds")
 		file(GLOB_RECURSE RESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${folder}/*")
-		target_sources(EndlessSky PRIVATE "${RESOURCES}")
+		target_sources(AsteroidMiner PRIVATE "${RESOURCES}")
 
 		foreach(FILE ${RESOURCES})
 			# Get the relative path from the root folder to the current file.
@@ -128,60 +122,60 @@ if(APPLE AND ES_CREATE_BUNDLE)
 
 	# Create the icns file, required for the bundle icon.
 	add_custom_command(
-		OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/icons/endless-sky.icns"
-		COMMAND iconutil -c icns -o icons/endless-sky.icns icons/endless-sky.iconset
-		DEPENDS icons/endless-sky.iconset/icon_16x16.png icons/endless-sky.iconset/icon_16x16@2x.png
-			icons/endless-sky.iconset/icon_32x32.png icons/endless-sky.iconset/icon_32x32@2x.png
-			icons/endless-sky.iconset/icon_128x128.png icons/endless-sky.iconset/icon_128x128@2x.png
-			icons/endless-sky.iconset/icon_256x256.png icons/endless-sky.iconset/icon_256x256@2x.png
-			icons/endless-sky.iconset/icon_512x512.png icons/endless-sky.iconset/icon_512x512@2x.png
+		OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/icons/asteroid-miner.icns"
+		COMMAND iconutil -c icns -o icons/asteroid-miner.icns icons/asteroid-miner.iconset
+		DEPENDS icons/asteroid-miner.iconset/icon_16x16.png icons/asteroid-miner.iconset/icon_16x16@2x.png
+			icons/asteroid-miner.iconset/icon_32x32.png icons/asteroid-miner.iconset/icon_32x32@2x.png
+			icons/asteroid-miner.iconset/icon_128x128.png icons/asteroid-miner.iconset/icon_128x128@2x.png
+			icons/asteroid-miner.iconset/icon_256x256.png icons/asteroid-miner.iconset/icon_256x256@2x.png
+			icons/asteroid-miner.iconset/icon_512x512.png icons/asteroid-miner.iconset/icon_512x512@2x.png
 		WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" VERBATIM)
 
 	# Now do the same to standone files.
-	foreach(file "license.txt" "keys.txt" "credits.txt" "copyright" "changelog" "icons/endless-sky.icns")
-		target_sources(EndlessSky PRIVATE ${file})
+	foreach(file "license.txt" "keys.txt" "credits.txt" "copyright" "changelog" "icons/asteroid-miner.icns")
+		target_sources(AsteroidMiner PRIVATE ${file})
 		set_source_files_properties(${file} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources/")
 	endforeach()
 
 	# Add plist to bundle.
-	set_target_properties(EndlessSky PROPERTIES
-		MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_LIST_DIR}/resources/EndlessSky-Info.plist"
-		XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME endless-sky)
-	set_target_properties(EndlessSky PROPERTIES OUTPUT_NAME "Endless Sky")
+	set_target_properties(AsteroidMiner PROPERTIES
+		MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_LIST_DIR}/resources/AsteroidMiner-Info.plist"
+		XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME asteroid-miner)
+	set_target_properties(AsteroidMiner PROPERTIES OUTPUT_NAME "Asteroid Miner")
 elseif(WIN32)
-	add_executable(EndlessSky WIN32 source/main.cpp source/WinApp.rc)
-	set_target_properties(EndlessSky PROPERTIES OUTPUT_NAME "Endless Sky")
+	add_executable(AsteroidMiner WIN32 source/main.cpp source/WinApp.rc)
+	set_target_properties(AsteroidMiner PROPERTIES OUTPUT_NAME "Asteroid Miner")
 else()
-	add_executable(EndlessSky source/main.cpp)
-	set_target_properties(EndlessSky PROPERTIES OUTPUT_NAME "endless-sky")
+	add_executable(AsteroidMiner source/main.cpp)
+	set_target_properties(AsteroidMiner PROPERTIES OUTPUT_NAME "asteroid-miner")
 endif()
 
 # Link with the library dependencies.
-target_link_libraries(EndlessSky PRIVATE EndlessSkyLib $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>)
+target_link_libraries(AsteroidMiner PRIVATE AsteroidMinerLib $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>)
 
 # Link with OpenGL or OpenGL ES.
-if(ES_GLES)
+if(AM_GLES)
 	find_package(OpenGL REQUIRED OpenGL EGL)
-	target_link_libraries(EndlessSky PRIVATE OpenGL::OpenGL OpenGL::EGL)
-	target_compile_definitions(EndlessSkyLib PUBLIC ES_GLES)
+	target_link_libraries(AsteroidMiner PRIVATE OpenGL::OpenGL OpenGL::EGL)
+	target_compile_definitions(AsteroidMinerLib PUBLIC AM_GLES)
 else()
 	find_package(OpenGL REQUIRED)
-	target_link_libraries(EndlessSky PRIVATE OpenGL::GL)
+	target_link_libraries(AsteroidMiner PRIVATE OpenGL::GL)
 
 	if(APPLE)
 		# Apple deprecated OpenGL in MacOS 10.14, but we don't care.
-		target_compile_definitions(EndlessSkyLib PUBLIC GL_SILENCE_DEPRECATION)
+		target_compile_definitions(AsteroidMinerLib PUBLIC GL_SILENCE_DEPRECATION)
 	else()
 		# GLEW is only needed on Linux and Windows.
-		target_link_libraries(EndlessSky PRIVATE GLEW::GLEW)
+		target_link_libraries(AsteroidMiner PRIVATE GLEW::GLEW)
 	endif()
 endif()
 
 # Copy the MinGW runtime DLLs if necessary.
 if(MINGW AND WIN32)
 	foreach(FILE_PATH ${MINGW_RUNTIME})
-		add_custom_command(TARGET EndlessSky POST_BUILD
-			COMMAND "${CMAKE_COMMAND}" -E copy_if_different "${FILE_PATH}" "$<TARGET_FILE_DIR:EndlessSky>"
+		add_custom_command(TARGET AsteroidMiner POST_BUILD
+			COMMAND "${CMAKE_COMMAND}" -E copy_if_different "${FILE_PATH}" "$<TARGET_FILE_DIR:AsteroidMiner>"
 			COMMAND_EXPAND_LISTS VERBATIM)
 
 		# Add an install rule for this DLLs, so that it is also included when installing.
@@ -191,10 +185,10 @@ endif()
 
 # Installation configurations.
 if(APPLE)
-	install(TARGETS EndlessSky CONFIGURATIONS Release BUNDLE DESTINATION .)
+	install(TARGETS AsteroidMiner CONFIGURATIONS Release BUNDLE DESTINATION .)
 elseif(WIN32)
 	# Install the binary.
-	install(TARGETS EndlessSky CONFIGURATIONS Release RUNTIME DESTINATION .)
+	install(TARGETS AsteroidMiner CONFIGURATIONS Release RUNTIME DESTINATION .)
 
 	# The MinGW DLLs needed were already installed above, and vcpkg installs the library DLLs.
 
@@ -208,37 +202,34 @@ elseif(WIN32)
 	install(FILES changelog DESTINATION .)
 elseif(UNIX)
 	# Install the binary.
-	install(TARGETS EndlessSky CONFIGURATIONS Release RUNTIME DESTINATION games)
+	install(TARGETS AsteroidMiner CONFIGURATIONS Release RUNTIME DESTINATION games)
 
 	# Install the desktop file.
-	install(FILES endless-sky.desktop DESTINATION share/applications)
-
-	# Install app center metadata.
-	install(FILES io.github.endless_sky.endless_sky.appdata.xml DESTINATION share/metainfo)
-
+	install(FILES asteroid-miner.desktop DESTINATION share/applications)
+    
 	# Install icons, keeping track of all the paths.
 	# Most Ubuntu apps supply 16, 22, 24, 32, 48, and 256, and sometimes others.
 	foreach(size "16x16" "22x22" "24x24" "32x32" "48x48" "128x128" "256x256" "512x512")
 		install(FILES "icons/icon_${size}.png" DESTINATION "share/icons/hicolor/${size}/apps"
-			RENAME endless-sky.png)
+			RENAME asteroid-miner.png)
 	endforeach()
 
 	# Gzip and install man file.
 	add_custom_command(
-		OUTPUT endless-sky.6.gz
-		COMMAND gzip -c endless-sky.6 > ${CMAKE_CURRENT_BINARY_DIR}/endless-sky.6.gz
-		DEPENDS endless-sky.6
+		OUTPUT asteroid-miner.6.gz
+		COMMAND gzip -c asteroid-miner.6 > ${CMAKE_CURRENT_BINARY_DIR}/asteroid-miner.6.gz
+		DEPENDS asteroid-miner.6
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 		VERBATIM)
-	target_sources(EndlessSky PRIVATE endless-sky.6.gz)
-	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/endless-sky.6.gz DESTINATION share/man/man6)
+	target_sources(AsteroidMiner PRIVATE asteroid-miner.6.gz)
+	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/asteroid-miner.6.gz DESTINATION share/man/man6)
 
 	# Install the resouce files.
-	install(DIRECTORY data DESTINATION share/games/endless-sky)
-	install(DIRECTORY images DESTINATION share/games/endless-sky)
-	install(DIRECTORY sounds DESTINATION share/games/endless-sky)
-	install(FILES credits.txt DESTINATION share/games/endless-sky)
-	install(FILES keys.txt DESTINATION share/games/endless-sky)
-	install(FILES copyright DESTINATION share/doc/endless-sky)
-	install(FILES changelog DESTINATION share/doc/endless-sky)
+	install(DIRECTORY data DESTINATION share/games/asteroid-miner)
+	install(DIRECTORY images DESTINATION share/games/asteroid-miner)
+	install(DIRECTORY sounds DESTINATION share/games/asteroid-miner)
+	install(FILES credits.txt DESTINATION share/games/asteroid-miner)
+	install(FILES keys.txt DESTINATION share/games/asteroid-miner)
+	install(FILES copyright DESTINATION share/doc/asteroid-miner)
+	install(FILES changelog DESTINATION share/doc/asteroid-miner)
 endif()
