Fix that weird software design decision

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -45,6 +45,8 @@ target_sources(AsteroidMinerLib PRIVATE
     game.cpp
     game.h
 	globalIncludes.h
+    lineRenderer.cpp
+    lineRenderer.h
     shaderProgram.cpp
     shaderProgram.h
     sprite.cpp
