--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,5 +97,7 @@
     },
     "editor.detectIndentation": false,
     "C_Cpp.default.cppStandard": "c++20",
-    "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
+    "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools",
+    "debug.terminal.clearBeforeReusing": true,
+    "terminal.integrated.defaultProfile.windows": "Command Prompt"
 }
